More fixup for special hero on IE8

--- a/components/compound/special_hero/_ie.scss
+++ b/components/compound/special_hero/_ie.scss
@@ -29,6 +29,9 @@
   }
 
   .special-hero__background-fallback {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: block;
     width: 100%;
   }
