--- a/components/media/icons/_tableau-icons.scss
+++ b/components/media/icons/_tableau-icons.scss
@@ -143,10 +143,10 @@ Style Guide: media.icons
 
 @font-face {
   font-family:"tableau-icons";
-  src:url("../fonts/tableau-icons-fb4516aa8ee43071ead5d9a278fa1336.eot?fb4516aa8ee43071ead5d9a278fa1336");
-  src:url("../fonts/tableau-icons-fb4516aa8ee43071ead5d9a278fa1336.eot?#iefix") format("embedded-opentype"),
-		url("../fonts/tableau-icons-fb4516aa8ee43071ead5d9a278fa1336.woff?fb4516aa8ee43071ead5d9a278fa1336") format("woff"),
-		url("../fonts/tableau-icons-fb4516aa8ee43071ead5d9a278fa1336.ttf?fb4516aa8ee43071ead5d9a278fa1336") format("truetype");
+  src:url("../fonts/tableau-icons-01b2bf680b0fc5ebcca63ae4cad29b85.eot?01b2bf680b0fc5ebcca63ae4cad29b85");
+  src:url("../fonts/tableau-icons-01b2bf680b0fc5ebcca63ae4cad29b85.eot?#iefix") format("embedded-opentype"),
+		url("../fonts/tableau-icons-01b2bf680b0fc5ebcca63ae4cad29b85.woff?01b2bf680b0fc5ebcca63ae4cad29b85") format("woff"),
+		url("../fonts/tableau-icons-01b2bf680b0fc5ebcca63ae4cad29b85.ttf?01b2bf680b0fc5ebcca63ae4cad29b85") format("truetype");
   font-weight:normal;
   font-style:normal;
 }
